--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - MKAT_TELEGRAM_CHAT_ID=${MKAT_TELEGRAM_CHAT_ID:-}
       - MKAT_DATABASE_PATH=/data/mkat.db
       - MKAT_LOG_LEVEL=${MKAT_LOG_LEVEL:-Information}
+      # - MKAT_BASE_PATH=/mkat  # Optional: URL prefix for reverse proxy
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
       interval: 30s
